# FatigueDetectionSystem

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  Threading_Optimization_Guide.md
resources/: styles.qss
src/: main.cpp  mainwindow.cpp  mainwindow.h
src/core/: DatabaseManager.cpp  DatabaseManager.h  DetectionEngine.cpp  DetectionEngine.h  VideoProcessor.cpp  VideoProcessor.h
src/ui/: DetectionRecordDialog.cpp  DetectionRecordDialog.h  SettingsDialog.cpp  SettingsDialog.h
src/utils/: Config.cpp  Config.h
